# mage-lab-community-tools

./: .gitignore  LICENSE  README.md  mage-social-hub-architecture.md  mage-social-hub-slack-implementation-plan.md  mage-social-hub-slack-roadmap-review.md  magedocs0.8.0.md  plan.md
CommunityBraveSearch/: BraveSearchCommunity.py  BraveSearchCommunity_README.md
GPT-import-chats/: README.md  import_gpt_history.py
GrepGlob/: GrepGlob.py  GrepGlob_README.md
Tools/: MAGE_MAPS.md
TranscribeAudio/: README.md  TranscribeAudio.py
claud-import-chats/: README.md  import_claude_history.py
mage_scheduler/: .env.example  .gitignore  LLM_API.md  PROJECT_PLAN.md  README.md  README_1.md  RunMageScheduler.sh  api.py  celery_app.py  dashboard.py  db.py  mage_scheduler.db-shm  mage_scheduler.db-wal  mage_scheduler_api.py  main.py  models.py  pyproject.toml  run_flower.sh  schemas.py  test_tasks.py
mage_scheduler/modules/: __init__.py  nvidia_monitor.py
mage_scheduler/scripts/: ask_assistant.py
mage_scheduler/tasks/: __init__.py  celery_app.py  cleanup_task.py  demo_schedule_task.py  dependency_task.py  gpu_dashboard.html  gpu_tasks.py  notification_task.py  recurring_task.py  task_manager.py
mage_scheduler/templates/: action_edit.html  action_form.html  dashboard.html  recurring.html  recurring_form.html  settings.html  task_detail.html  tasks.html
mage_scheduler/tests/: README.md  conftest.py  test_api_task_endpoints.py  test_beat_task.py  test_cleanup.py  test_dependency_runtime.py  test_intent_api_recurring.py  test_notification_task.py  test_recurring_beat_task.py
(+62 files in other folders)
