[project]
name = "mage-scheduler"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "celery>=5.5.3",
    "croniter>=1.4.0",
    "dateparser>=1.2.0",
    "fastapi>=0.115.0",
    "jinja2>=3.1.3",
    "python-multipart>=0.0.9",
    "redis>=6.2.0",
    "sqlalchemy>=2.0.0",
    "uvicorn>=0.30.0",
]
