[project]
name = "mage-scheduler"
version = "0.1.0"
description = "A task scheduling service for LLM-driven automation: schedule commands, actions, and recurring jobs via a FastAPI + Celery + Redis stack."
readme = "README.md"
requires-python = ">=3.11"
license = {text = "MIT"}
authors = [
    {name = "mage lab Community Tools Contributors"},
]

[project.urls]
Repository = "https://github.com/mage-lab/mage-lab-community-tools"

dependencies = [
    "celery>=5.5.3",
    "croniter>=1.4.0",
    "dateparser>=1.2.0",
    "fastapi>=0.115.0",
    "jinja2>=3.1.3",
    "python-multipart>=0.0.9",
    "redis>=6.2.0",
    "sqlalchemy>=2.0.0",
    "uvicorn>=0.30.0",
    "tzdata>=2024.1; sys_platform == 'win32'",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]

[dependency-groups]
dev = [
    "httpx>=0.28.1",
    "pytest>=8.0.0",
]
